--- a/web.config
+++ b/web.config
@@ -4,6 +4,7 @@
     <handlers>
         <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
         <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+        <iisnode watchedFiles="web.config;*.js"/>
     </handlers>
 
     <rewrite>
