--- a/.github/workflows/main_aifl.yml
+++ b/.github/workflows/main_aifl.yml
@@ -21,10 +21,8 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
+      - name: npm install, build
+        run: npm run build-prod
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
