--- a/.github/workflows/main_aifl.yml
+++ b/.github/workflows/main_aifl.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      CI: false
 
     steps:
       - uses: actions/checkout@v4
@@ -23,9 +25,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm build-prod
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
