--- a/.github/workflows/main_aifl.yml
+++ b/.github/workflows/main_aifl.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm build-prod
+          npm run build-prod
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
