--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@react-oauth/google": "^0.11.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/pdfjs-dist": "^2.10.378",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
+    "pdfjs-dist": "^3.10.111",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -20,9 +23,7 @@
     "react-scripts": "5.0.1",
     "serve": "^14.2.0",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
-    "@types/pdfjs-dist": "^2.10.378",
-    "pdfjs-dist": "^3.10.111"
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
