--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^10.0.5",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
