--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
-    "openai": "^4.17.0"
+    "openai": "^4.17.0",
+    "playwright": "^1.43.0"
   }
 }
