--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/pdfjs-dist": "^2.10.378",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "pdfjs-dist": "^3.10.111",
     "react": "^18.2.0",
