--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "build-prod": "cd client && npm install && npm run build && cd .. && npm install && npx playwright install"
+    "build-prod": "cd client && npm install && npm run build && cd .. && npm install"
   },
   "author": "",
   "license": "ISC",
