--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^1.10.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@craco/craco": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@react-oauth/google": "^0.11.1",
@@ -15,6 +16,7 @@
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
+    "mammoth": "^1.7.2",
     "pdfjs-dist": "^3.10.111",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -32,13 +34,14 @@
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "serve": "^14.2.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
