--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
-    "openai": "^4.17.0",
-    "playwright": "^1.43.0",
-    "turndown": "^7.1.3"
+    "openai": "^4.17.0"
   }
 }
