--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/pdfjs-dist": "^2.10.378",
     "bootstrap": "^5.2.3",
+    "docx": "^9.0.2",
     "dotenv": "^16.0.3",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "mammoth": "^1.7.2",
     "pdfjs-dist": "^3.10.111",
